--- a/html-site/index.html
+++ b/html-site/index.html
@@ -15,7 +15,12 @@
         </ul>
 
         <h1 >Project Description:</h1>
-        <p > Veniam ipsum ipsum enim proident.</p>
+        <p>Our website lets you pick a subject and topic (e.g. “Biology — Photosynthesis”), <br>
+            then generates a custom practice test for you—multiple-choice with AI <br>
+            You can also upload a PDF (say a textbook chapter or lecture slides), and the site will scan it and <br>
+            produce a summary PDF you can download. The backend handles parsing uploaded PDFs, generating questions <br>
+            based on the content, and assembling the test/summary, while the frontend gives you an easy way to choose topic, <br>
+            format, level of difficulty, and get results fast.</p>
     </body>
     <link rel="stylesheet" href="style.css">
 </head>
