--- a/html-site/index.html
+++ b/html-site/index.html
@@ -11,7 +11,7 @@
             <li>Robert Cabrera</li>
             <li>Kalelo Dukuray</li>
             <li>David Zhang</li>
-            <li>Tyler Roso</li>
+            <li>Tyler Rosa</li>
         </ul>
 
         <h1 >Project Description:</h1>
