created structure and navigation bar frontend

--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Proposal from Code 7</title>
-    <body>
-        <h1 >Team Name: Code 7</h1>
-        <h2> Team Members:</h2>
-        <ul >
-            <li>Robert Cabrera</li>
-            <li>Kalelo Dukuray</li>
-            <li>David Zhang</li>
-            <li>Tyler Rosa</li>
-        </ul>
+    <title>NoteSmith</title>
 
-        <h1 >Project Description:</h1>
-        <p>Our website lets you pick a subject and topic (e.g. “Biology — Photosynthesis”), <br>
-            then generates a custom practice test for you—multiple-choice with AI <br>
-            You can also upload a PDF (say a textbook chapter or lecture slides), and the site will scan it and <br>
-            produce a summary PDF you can download. The backend handles parsing uploaded PDFs, generating questions <br>
-            based on the content, and assembling the test/summary, while the frontend gives you an easy way to choose topic, <br>
-            format, level of difficulty, and get results fast.</p>
-    </body>
-    <link rel="stylesheet" href="style.css">
-</head>
 <body>
-    
+    <div class="navigation-bar">
+        <div class="nav-left">
+            <a class="active" href="./index.html">
+                <img src="./assets/NoteSmith_logo.png" alt="Logo" class="logo">
+            </a>
+        </div>
+
+        <div class="nav-center">
+            <a href="./pages/crash_course.html">Crash Course</a>
+            <a href="./pages/practice_tests.html">Practice Test</a>
+            <a href="./pages/summary.html">Summary</a>
+        </div>
+        <div class="nav-right">
+            <a href="./pages/login.html" class="login">Login/Sign Up</a>
+        </div>
+    </div>
+
+
+    <div class="home-container">
+
+    </div>
 </body>
+<link rel="stylesheet" href="./stylesheets/style.css">
+</head>
+
+<body>
+
+</body>
+
 </html>
