added local storage of login state

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="./pages/summary.html">Summary</a>
         </div>
         <div class="nav-right">
-            <a href="./pages/login.html" class="login">Login/Sign Up</a>
+            <a href="#" id="loginBtn" class="login">Login/Sign Up</a>
         </div>
     </div>
 
@@ -29,6 +29,8 @@
 
     </div>
 </body>
+
+<script src="./scripts/script.js"></script>
 <link rel="stylesheet" href="./stylesheets/style.css">
 </head>
 
