--- a/pages/crash_course.html
+++ b/pages/crash_course.html
@@ -7,26 +7,27 @@
     <title>NoteSmith - Crash Course</title>
 
 <body>
-  <div class="navigation-bar">
+    <div class="navigation-bar">
         <div class="nav-left">
-            <div class="nav-left">
             <a href="../index.html">
                 <img src="../assets/NoteSmith_logo.png" alt="Logo" class="logo">
             </a>
         </div>
-        </div>
+
         <div class="nav-center">
             <a class="active" href="./crash_course.html">Crash Course</a>
             <a href="./practice_tests.html">Practice Test</a>
             <a href="./summary.html">Summary</a>
         </div>
         <div class="nav-right">
-            <a href="./login.html" class="login">Login/Sign Up</a>
+            <a href="#" id="loginBtn" class="login">Login/Sign Up</a>
         </div>
     </div>
+    <div class="crash-course-container">
 
     </div>
 </body>
+<script src="../scripts/script.js"></script>
 <link rel="stylesheet" href=".././stylesheets/style.css">
 </head>
 
