--- a/pages/summary.html
+++ b/pages/summary.html
@@ -9,24 +9,25 @@
 <body>
     <div class="navigation-bar">
         <div class="nav-left">
-            <div class="nav-left">
-            <a  href="../index.html">
+            <a href="../index.html">
                 <img src="../assets/NoteSmith_logo.png" alt="Logo" class="logo">
             </a>
         </div>
-        </div>
+
         <div class="nav-center">
             <a href="./crash_course.html">Crash Course</a>
             <a href="./practice_tests.html">Practice Test</a>
             <a class="active" href="./summary.html">Summary</a>
         </div>
         <div class="nav-right">
-            <a href="./login.html" class="login">Login/Sign Up</a>
+            <a href="#" id="loginBtn" class="login">Login/Sign Up</a>
         </div>
     </div>
+    <div class="summary-test-container">
 
     </div>
 </body>
+<script src="../scripts/script.js"></script>
 <link rel="stylesheet" href=".././stylesheets/style.css">
 </head>
 
