--- a/pages/account_settings.html
+++ b/pages/account_settings.html
@@ -22,6 +22,7 @@
 
     </div>
 </body>
+<script src="../scripts/script.js"></script>
 <link rel="stylesheet" href=".././stylesheets/style.css">
 </head>
 
