Added dark/light styling and button -David
Feel free to change styling to your vision. Also logo does look "weird" in dark mode.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NoteSmith</title>
+    <link rel="stylesheet" href="./stylesheets/style.css">
+    <script src="./scripts/script.js"></script>
+</head>
 
 <body>
     <div class="navigation-bar">
         <div class="nav-left">
-            <a class="active" href="./index.html">
+            <!-- removed class for looks-->
+            <a href="./index.html">
                 <img src="./assets/NoteSmith_logo.png" alt="Logo" class="logo">
             </a>
         </div>
@@ -18,24 +22,17 @@
             <a href="./pages/crash_course.html">Crash Course</a>
             <a href="./pages/practice_tests.html">Practice Test</a>
             <a href="./pages/summary.html">Summary</a>
+            <button id="theme-toggle" class="theme-toggle">Theme</button>
         </div>
+        
         <div class="nav-right">
             <a href="#" id="loginBtn" class="login">Login/Sign Up</a>
         </div>
     </div>
 
-
     <div class="home-container">
 
     </div>
-</body>
-
-<script src="./scripts/script.js"></script>
-<link rel="stylesheet" href="./stylesheets/style.css">
-</head>
-
-<body>
-
 </body>
 
 </html>
