--- a/pages/account_settings.html
+++ b/pages/account_settings.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NoteSmith - Account Settings</title>
+    <script src="../scripts/script.js"></script>
+    <link rel="stylesheet" href=".././stylesheets/style.css">
+</head>
 
 <body>
     <div class="navigation-bar">
@@ -17,14 +20,13 @@
         <a href="./practice_tests.html">Practice Test</a>
         <a href="./summary.html">Summary</a>
         <a href="./login.html">Login</a>
+        <!-- idk if this will have a nav bar, but add the center nav if so.-->
+        <button id="theme-toggle" class = "theme-toggle">Theme</button>
     </div>
     <div class="account-settings-container">
 
     </div>
 </body>
-<script src="../scripts/script.js"></script>
-<link rel="stylesheet" href=".././stylesheets/style.css">
-</head>
 
 <body>
 
