--- a/pages/crash_course.html
+++ b/pages/crash_course.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NoteSmith - Crash Course</title>
+    <script src="../scripts/script.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <link rel="stylesheet" href=".././stylesheets/style.css">
+</head>
 
 <body>
     <div class="navigation-bar">
@@ -18,6 +22,7 @@
             <a class="active" href="./crash_course.html">Crash Course</a>
             <a href="./practice_tests.html">Practice Test</a>
             <a href="./summary.html">Summary</a>
+            <button id="theme-toggle" class = "theme-toggle">Theme</button>
         </div>
         <div class="nav-right">
             <a href="#" id="loginBtn" class="login">Login/Sign Up</a>
@@ -42,10 +47,7 @@
     </div>
 
 </body>
-<script src="../scripts/script.js"></script>
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<link rel="stylesheet" href=".././stylesheets/style.css">
-</head>
+
 
 <body>
 
