--- a/pages/summary.html
+++ b/pages/summary.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NoteSmith - Summary</title>
-    <link rel="stylesheet" href="../stylesheets/style.css">
-
+    <script src="../scripts/script.js"></script>
+    <link rel="stylesheet" href=".././stylesheets/style.css">
 </head>
 
 <body>
@@ -21,6 +21,7 @@
             <a href="./crash_course.html">Crash Course</a>
             <a href="./practice_tests.html">Practice Test</a>
             <a class="active" href="./summary.html">Summary</a>
+            <button id="theme-toggle" class = "theme-toggle">Theme</button>
         </div>
 
         <div class="nav-right">
@@ -53,8 +54,11 @@
             <div id="summary-output" style="display:none;"></div>
         </div>
     </div>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <script src="../scripts/script.js"></script>
+</body>
+
+
+<body>
+
 </body>
 
 </html>
