--- a/pages/practice_tests.html
+++ b/pages/practice_tests.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NoteSmith - Practice Test</title>
+    <script src="../scripts/script.js"></script>
+    <link rel="stylesheet" href=".././stylesheets/style.css">
+</head>
 
 <body>
     <div class="navigation-bar">
@@ -18,6 +21,7 @@
             <a href="./crash_course.html">Crash Course</a>
             <a class="active" href="./practice_tests.html">Practice Test</a>
             <a href="./summary.html">Summary</a>
+            <button id="theme-toggle" class = "theme-toggle">Theme</button>
         </div>
         <div class="nav-right">
             <a href="#" id="loginBtn" class="login">Login/Sign Up</a>
@@ -27,9 +31,6 @@
 
     </div>
 </body>
-<script src="../scripts/script.js"></script>
-<link rel="stylesheet" href=".././stylesheets/style.css">
-</head>
 
 <body>
 
