--- a/pages/summary.html
+++ b/pages/summary.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NoteSmith - Summary</title>
     <script src="../scripts/script.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <link rel="stylesheet" href=".././stylesheets/style.css">
 </head>
 
