Index and dashboard
Added html and css for both pages and added/fixed scripts for navigation.

--- a/index.html
+++ b/index.html
@@ -24,13 +24,38 @@
             <a href="./pages/summary.html">Summary</a>
             <button id="theme-toggle" class="theme-toggle">Theme</button>
         </div>
-        
+
         <div class="nav-right">
             <a href="#" id="loginBtn" class="login">Login/Sign Up</a>
         </div>
     </div>
 
     <div class="home-container">
+        <section class="index-section">
+            <h1>Smith your notes, hammer your tests (puns are hard)</h1>
+            <p>NoteSmith will make your academic life 10x easier at the low price of 1,000,000,000 Lebanese Pounds!</p>
+        </section>
+
+        <section id="features" class="features-section">
+            <h2>How NoteSmith can help you study</h2>
+            <div class="feature-cards">
+                <div class="card">
+                    <h3>Topic Search & Crash Course</h3>
+                    <p>Quickly look up any subject and access god-tier notes, explainations, and illustrations that are made in real time by starving artists for fast learning.</p>
+                    <a href="./pages/crash_course.html" class="feature-link">Start Learning</a>
+                </div>
+                <div class="card">
+                    <h3>Personalized Practice Tests</h3>
+                    <p>Upload your class notes and let our AI generate test your knowledge and confirm that yes you are going to fail.</p>
+                    <a href="./pages/practice_tests.html" class="feature-link">Create a Test</a>
+                </div>
+                <div class="card">
+                    <h3>Automated Summaries</h3>
+                    <p>Get instant summaries of your notes or study topics saving you time that can be used for actually important things...</p>
+                    <a href="./pages/summary.html" class="feature-link">View Summaries</a>
+                </div>
+            </div>
+        </section>
 
     </div>
 </body>
