Added comments for the files and functions edited.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<!--
+    index.html
+
+    Description:
+    The main landing page for NoteSmith, a web application designed to assist students with their studies.
+    This page provides an overview of the application's features, including topic search, personalized practice tests,
+    and automated summaries. The page includes a navigation bar, feature sections, and links to other
+    parts of the application.
+
+    Scripts used so far and explanation:
+    - script.js: Contains JavaScript functions for theme toggling and other interactive elements on the page.
+    - style.css: Contains CSS styles for the layout and design of the page.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,7 +26,6 @@
 <body>
     <div class="navigation-bar">
         <div class="nav-left">
-            <!-- removed class for looks-->
             <a href="./index.html">
                 <img src="./assets/NoteSmith_logo.png" alt="Logo" class="logo">
             </a>
