--- a/pages/account_settings.html
+++ b/pages/account_settings.html
@@ -1,3 +1,12 @@
+<!--
+    account_settings.html
+
+    This file contains the HTML structure for the account settings page of NoteSmith.
+    It includes a navigation bar and a container for account settings content.
+
+    (NOT DONE YET)
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
