--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -1,3 +1,14 @@
+<!--
+    dashboard.html
+
+    This file contains the HTML structure for the dashboard page of NoteSmith.
+    It includes a navigation bar and a container for dashboard content.
+
+    Features:
+    - Displays user-specific information and quick access to study tools.
+    - Also has a cool koala fact (idk why really - i like it though)
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
