--- a/pages/login.html
+++ b/pages/login.html
@@ -1,3 +1,13 @@
+<!--
+    login.html
+
+    This file contains the HTML structure for the login page of NoteSmith.
+    It includes a navigation bar and a container for login content.
+
+    (NOT DONE YET) but to be fair most of the work will be done in js and by supabase
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
