--- a/pages/summary.html
+++ b/pages/summary.html
@@ -1,3 +1,15 @@
+<!--
+    summary.html
+
+    This file contains the HTML structure for the crash course page of NoteSmith.
+    It includes a navigation bar and a container for crash course content.
+
+    Features (so far):
+    - Lets you upload a PDF and outputs a dummy template response. (we need to hook up to backend) plus nice LottieFiles animation
+    - Locked behind a login (dummy check for now) but very cool animation through LottieFiles. hehe
+    
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
