--- a/pages/practice_tests.html
+++ b/pages/practice_tests.html
@@ -1,3 +1,12 @@
+<!--
+    practice_test.html
+
+    This file contains the HTML structure for the practice test page of NoteSmith.
+    It includes a navigation bar and a container for practice test content.
+
+    (NOT DONE YET) 
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
