modularized server.js and script.js, added user.json

--- a/pages/practice_tests.html
+++ b/pages/practice_tests.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NoteSmith – Practice Test</title>
   <link rel="stylesheet" href="../stylesheets/style.css" />
-  <script src="../scripts/script.js" defer></script>
+  <script type="module" src="../scripts/script.js"></script>
 </head>
 <body>
   <!-- Navigation -->
