--- a/pages/crash_course.html
+++ b/pages/crash_course.html
@@ -33,7 +33,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NoteSmith - Crash Course</title>
-    <script src="../scripts/script.js"></script>
+    <script type="module" src="../scripts/script.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <link rel="stylesheet" href=".././stylesheets/style.css">
 </head>
