Fixed html injections on js files. Created simulated database fetch with dummy waiting and asycn fetch

--- a/pages/account_settings.html
+++ b/pages/account_settings.html
@@ -14,8 +14,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NoteSmith - Account Settings</title>
+    <link rel="stylesheet" href="../stylesheets/style.css">
     <script type="module" src="../scripts/script.js"></script>
-    <link rel="stylesheet" href=".././stylesheets/style.css">
 </head>
 
 <body>
@@ -25,20 +25,23 @@
                 <img src="../assets/NoteSmith_logo.png" alt="Logo" class="logo">
             </a>
         </div>
-        <a href="./crash_course.html">Crash Course</a>
-        <a href="./practice_tests.html">Practice Test</a>
-        <a href="./summary.html">Summary</a>
-        <a href="./login.html">Login</a>
-        <!-- idk if this will have a nav bar, but add the center nav if so.-->
-        <button id="theme-toggle" class = "theme-toggle">Theme</button>
+
+        <div class="nav-center">
+            <a href="crash_course.html">Crash Course</a>
+            <a href="practice_tests.html">Practice Test</a>
+            <a href="summary.html">Summary</a>
+            <button id="theme-toggle" class="theme-toggle">Theme</button>
+        </div>
+
+        <div class="nav-right">
+            <a href="#" id="loginBtn" class="login">Login/Sign Up</a>
+        </div>
     </div>
+
     <div class="account-settings-container">
-
+        <h1>Account Settings</h1>
+        <p>Manage your NoteSmith account settings here.</p>
     </div>
-</body>
-
-<body>
-
 </body>
 
 </html>
