--- a/pages/login-signup.html
+++ b/pages/login-signup.html
@@ -33,9 +33,7 @@
       </div>
 
       <div class="nav-right">
-        <a href="#" id="#FUNCTIONALITY NEEDS WORK#" class="login"
-          >Login/Sign Up</a
-        >
+        <a href="#" id="loginBtn" class="login">Login/Sign Up</a>
       </div>
     </div>
 
