--- a/frontend/pages/summary.html
+++ b/frontend/pages/summary.html
@@ -20,7 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
     <script type="module" src="../scripts/script.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <link rel="stylesheet" href=".././stylesheets/style.css">
+    <link rel="stylesheet" href="../stylesheets/style.css">
 </head>
 
 <body>
