--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -14,10 +14,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NoteSmith - Dashboard</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dashboard - NoteSmith</title>
     <script type="module" src="../scripts/script.js"></script>
-    <link rel="stylesheet" href=".././stylesheets/style.css">
+    <link rel="stylesheet" href="../stylesheets/style.css">
 </head>
 
 <body>
